--- a/src/index.html
+++ b/src/index.html
@@ -18,5 +18,13 @@
             </nav>
         </div>
     </header>
+    <section id="about" class="bg-white py-20">
+        <div class="container mx-auto text-center">
+            <h2 class="text-4xl font-bold mb-6">About Me</h2>
+            <p class="text-gray-700 max-w-xl mx-auto">
+                I am a passionate developer with skills in modern web technologies. I love to create web solutions that solve real-world problems.
+            </p>
+        </div>
+    </section>
 </body>
 </html>
