--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Layout</title>
+    <link rel="stylesheet" href="output.css">
 </head>
 <body class="font-sans bg-gray-100">
     <header class="bg-gray-800 text-white p-5">
@@ -24,6 +25,39 @@
             <p class="text-gray-700 max-w-xl mx-auto">
                 I am a passionate developer with skills in modern web technologies. I love to create web solutions that solve real-world problems.
             </p>
+        </div>
+    </section>
+        <section id="projects" class="bg-gray-200 py-20">
+            <div class="container mx-auto text-center">
+                <h2 class="text-4xl font-bold mb-6">My Projects</h2>
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
+                    <div class="bg-white p-6 shadow-lg">
+                        <h3 class="text-2xl font-semibold mb-4">Project One</h3>
+                        <p class="text-gray-600">A brief description of the project.</p>
+                    </div>
+                    <div class="bg-white p-6 shadow-lg">
+                        <h3 class="text-2xl font-semibold mb-4">Project Two</h3>
+                        <p class="text-gray-600">A brief description of the project.</p>
+                    </div>
+                    <div class="bg-white p-6 shadow-lg">
+                        <h3 class="text-2xl font-semibold mb-4">Project Three</h3>
+                        <p class="text-gray-600">A brief description of the project.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+            <!-- Contact Section -->
+    <section id="contact" class="bg-white py-20">
+        <div class="container mx-auto text-center">
+            <h2 class="text-4xl font-bold mb-6">Contact Me</h2>
+            <p class="text-gray-700 max-w-xl mx-auto mb-8">
+                Feel free to reach out to me through the following platforms.
+            </p>
+            <div class="flex justify-center space-x-6">
+                <a href="#" class="text-gray-800 hover:text-blue-500">LinkedIn</a>
+                <a href="#" class="text-gray-800 hover:text-blue-500">GitHub</a>
+                <a href="#" class="text-gray-800 hover:text-blue-500">Email</a>
+            </div>
         </div>
     </section>
 </body>
