--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
                     <a href="https://codepen.io/freeCodeCamp/full/KzXQgy" class="text-red-500">Tik-Tac-Toe Game</a>
                 </div>
                 <div class="mt-10 flex justify-center items-center w-full">
-                    <button onclick="window.open('https://codepen.io/FreeCodeCamp/', '_blank')" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-700">
+                    <button onclick="window.open('https://codepen.io/FreeCodeCamp/', '_blank')" class="bg-gray-500 text-white px-4 py-2 rounded hover:bg-blue-700">
                         Show All
                     </button>
                 </div>
